--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,3 +25,5 @@ jobs:
       run: npm ci
     - name: build  
       run: npm run build
+    - name: external links
+      run: find _site/**/*.html | xargs grep -ho 'href="http.*"' | sort | uniq
