--- a/package.json
+++ b/package.json
@@ -45,15 +45,15 @@
     "app-root-path": "^3.0.0",
     "chokidar-cli": "^2.1.0",
     "copyfiles": "^2.2.0",
-    "eleventy-lib": "johnteske/eleventy-lib",
-    "ffdb-jtm": "johnteske/ffdb-jtm",
+    "eleventy-lib": "github:johnteske/eleventy-lib",
+    "ffdb-jtm": "github:johnteske/ffdb-jtm",
     "gh-pages": "^2.2.0",
     "moment": "^2.25.3",
-    "postcss": "^7.0.29",
+    "postcss": "^7.0.30",
     "postcss-cli": "^7.1.1",
     "postcss-custom-properties": "^9.1.1",
     "postcss-import": "^12.0.1",
-    "rollup": "^2.9.0",
+    "rollup": "^2.10.2",
     "serve": "^11.3.0",
     "slugify": "^1.4.0",
     "ws": "^7.3.0"
