--- a/package.json
+++ b/package.json
@@ -55,10 +55,10 @@
     "postcss-import": "^12.0.1",
     "rollup": "^2.10.2",
     "serve": "^11.3.2",
-    "slugify": "^1.4.0",
-    "ws": "^7.3.0"
+    "slugify": "^1.4.0"
   },
   "devDependencies": {
+    "@vectorscores/configs": "git+https://github.com/vectorscores/configs.git#main",
     "prettier": "^2.0.5",
     "stylelint": "^13.3.3",
     "stylelint-config-standard": "^20.0.0"
