--- a/package.json
+++ b/package.json
@@ -57,9 +57,11 @@
     "typescript": "^3.9.7"
   },
   "devDependencies": {
+    "@types/node": "^14.0.27",
     "@typescript-eslint/eslint-plugin": "^3.7.1",
     "@typescript-eslint/parser": "^3.7.1",
     "@vectorscores/configs": "git+https://github.com/vectorscores/configs.git#main",
+    "@vectorscores/design": "git+https://github.com/vectorscores/design.git#main",
     "eslint": "^7.6.0",
     "prettier": "^2.0.5",
     "stylelint": "^13.3.3",
