--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "postcss_options": "--no-map --use postcss-import postcss-custom-properties"
   },
   "scripts": {
-    "build": "mkdir -p _site; npm run build:js & npm run build:css & eleventy --quiet; wait",
+    "build": "npm run clean; mkdir -p _site; npm run build:js & npm run build:css & eleventy --quiet; wait && npm run build:flatten",
     "build:css": "npm run build:css:assets & npm run build:css:scores",
     "build:css:assets": "postcss assets/css/*.css --dir _site/assets/css $npm_package_config_postcss_options",
     "build:css:scores": "postcss scores/{*,*/*}/styles.css --base scores --dir _site/scores $npm_package_config_postcss_options",
     "build:js": "find {assets/js,scores} -name 'vectorscores.js' -o -name 'index.js' | xargs -I {} rollup {} --silent --format iife --file _site/{}",
-    "deploy": "SITE_BASE_URL=vectorscores npm run build && gh-pages -d _site",
+    "build:flatten": "mv _site/scores/* _site/ && rm -rf _site/scores",
+    "clean": "rm -rf _site",
+    "deploy": "SITE_BASE_URL=scores npm run build && gh-pages -d _site",
     "fix:css": "stylelint assets/css/**/*.css --fix",
     "format": "prettier --write '{layouts,partials,scores}/**/*.js'",
     "serve": "serve -n -l 8081 _site",
