--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "@vectorscores/scores",
   "version": "3.0.0",
   "description": "A series of new compositions built on the web",
+  "type": "module",
   "engines": {
-    "node": ">=10"
+    "node": ">=14"
   },
   "main": "_site/works.json",
   "directories": {
@@ -24,7 +25,7 @@
     "format": "prettier --write '{assets,layouts,partials,scores}/**/*.js'",
     "serve": "serve -n -l 8081 _site",
     "serve:external": "serve -n -l tcp://0.0.0.0:80 _site",
-    "test": "./node_modules/.bin/tape {assets,build,scores}/**/*.test.js",
+    "test": "tape-es \"{assets,build,scores}/**/*.test.js\"",
     "watch": "chokidar '**/*.*' -i 'node_modules' -i '_site' -c \"npm run build && echo 'done'\""
   },
   "repository": {
@@ -56,6 +57,7 @@
     "serve": "^11.3.2",
     "slugify": "^1.4.6",
     "tape": "^5.0.1",
+    "tape-es": "^1.2.15",
     "typescript": "^4.2.3"
   },
   "devDependencies": {
