Set up tsconfig

--- a/package.json
+++ b/package.json
@@ -17,14 +17,14 @@
     "build:css": "npm run build:css:assets & npm run build:css:scores",
     "build:css:assets": "postcss assets/css/*.css --dir _site/assets/css $npm_package_config_postcss_options",
     "build:css:scores": "postcss scores/{*,*/*}/styles.css --base scores --dir _site $npm_package_config_postcss_options",
-    "build:js": "node build/bundle.js",
+    "build:js": "tsc -p . && node build/bundle.js",
     "clean": "rm -rf _site",
     "deploy": "SITE_BASE_URL=scores npm run build && gh-pages -d _site",
     "fix:css": "stylelint assets/css/**/*.css --fix",
-    "format": "prettier --write '{assets,layouts,partials,scores}/**/*.js'",
+    "format": "prettier --write '{assets,layouts,partials,scores}/**/*.{js,ts}'",
     "serve": "serve -n -l 8081 _site",
     "serve:external": "serve -n -l tcp://0.0.0.0:80 _site",
-    "test": "./node_modules/.bin/tape {assets,build,scores}/**/*.test.js",
+    "test": "ts-node ./node_modules/.bin/tape \"{assets,build,scores}/**/*.test.{js,ts}\"",
     "watch": "chokidar '**/*.*' -i 'node_modules' -i '_site' -c \"npm run build && echo 'done'\""
   },
   "repository": {
@@ -41,34 +41,37 @@
   "bugs": "https://github.com/vectorscores/scores/issues",
   "homepage": "https://github.com/vectorscores/scores#readme",
   "dependencies": {
-    "@11ty/eleventy": "^0.12.1",
-    "app-root-path": "^3.0.0",
-    "chokidar-cli": "^2.1.0",
-    "d3": "^6.7.0",
-    "eleventy-lib": "github:johnteske/eleventy-lib",
-    "findit": "^2.0.0",
-    "gh-pages": "^3.1.0",
-    "postcss": "^8.2.10",
-    "postcss-cli": "^8.3.1",
-    "postcss-custom-properties": "^11.0.0",
-    "postcss-import": "^13.0.0",
-    "rollup": "^2.42.4",
-    "serve": "^11.3.2",
-    "slugify": "^1.5.0",
-    "tape": "^5.0.1",
-    "typescript": "^4.2.3"
+    "d3": "^6.7.0"
   },
   "devDependencies": {
+    "@11ty/eleventy": "^0.12.1",
+    "@tsconfig/recommended": "^1.0.1",
     "@types/node": "^14.14.10",
+    "@types/tape": "^4.13.0",
     "@typescript-eslint/eslint-plugin": "^4.9.0",
     "@typescript-eslint/parser": "^4.9.0",
     "@vectorscores/configs": "git+https://github.com/vectorscores/configs.git#main",
     "@vectorscores/design": "git+https://github.com/vectorscores/design.git#main",
+    "app-root-path": "^3.0.0",
+    "chokidar-cli": "^2.1.0",
+    "eleventy-lib": "github:johnteske/eleventy-lib",
     "eslint": "^7.14.0",
+    "findit": "^2.0.0",
+    "gh-pages": "^3.1.0",
     "mock-env": "^0.2.0",
+    "postcss": "^8.2.10",
+    "postcss-cli": "^8.3.1",
+    "postcss-custom-properties": "^11.0.0",
+    "postcss-import": "^13.0.0",
     "prettier": "^2.2.1",
+    "rollup": "^2.42.4",
+    "serve": "^11.3.2",
+    "slugify": "^1.5.0",
     "stylelint": "^13.8.0",
-    "stylelint-config-standard": "^20.0.0"
+    "stylelint-config-standard": "^20.0.0",
+    "tape": "^5.0.1",
+    "ts-node": "^10.0.0",
+    "typescript": "^4.2.3"
   },
   "stylelint": {
     "extends": "stylelint-config-standard"
