--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,9 @@
 {
-"extends": "@tsconfig/recommended/tsconfig.json",
-"include": ["scores/**/*"],
-"exclude": ["node_modules", "**/*.test.*"],
-"compilerOptions": {
-}
+  "extends": "@tsconfig/recommended/tsconfig.json",
+  "include": ["scores/**/*"],
+  "exclude": ["node_modules", "**/*.test.*"],
+  "compilerOptions": {
+    "allowJs": true,
+    "outDir": "./.scores"
+  }
 }
